更新GC CARDTABLE相关知识